dhall/tests/type-inference/failure/unit/RecordLitDuplicateFields.txt
Type error: error: RecordTypeDuplicateField
 --> <current file>:1:0
  |
1 | { x = 0, x = 0 }
  | ^^^^^^^^^^^^^^^^ RecordTypeDuplicateField
  |
